#3 added string resource

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="mr_placeholder_nickname">nastix123</string>
     <string name="mr_repeat_password">Repeat password</string>
     <string name="mr_already_have_an_account">Already have an account?</string>
+    <string name="mr_submit_code">Подтвердите код</string>
 </resources>
