--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="mr_already_have_an_account">Already have an account?</string>
     <string name="mr_submit_code">Submit code</string>
     <string name="mr_passwords_dont_match">Passwords don\'t match</string>
+    <string name="mr_email">Email</string>
 </resources>
